--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,7 @@
-<h4>login</h4>
+<h4>Login</h4>
 <form>
     <input type="text" name="name" placeholder="username" ng-model="user">
+    <button ng-click="logToChat()">Login</button><br>
     <br>
-    <button ng-click="logToChat()">Login</button>
+    <sign-up></sign-up>
 </form>
