--- a/app/views/deleteMessage.html
+++ b/app/views/deleteMessage.html
@@ -1,6 +1,1 @@
-<h4>Delete one message</h4>
-<form>
-    <input type="text" name="messageid" placeholder="viestin id esim 266" ng-model="id">
-    <button ng-click="deleteMessage()">Delete message</button>
-    <br>
-</form>
+<button type="button" class="btn btn-danger btn-xs" ng-click="deleteMessage()">Delete</button>
