--- a/app/views/deleteUser.html
+++ b/app/views/deleteUser.html
@@ -1,5 +1,1 @@
-<h4>Delete user: {{name}}</h4>
-<form>
-    <button ng-click="deleteUser()">Delete User</button>
-    <br>
-</form>
+<button type="button" class="btn btn-danger" ng-click="deleteUser()">Delete {{name}}</button>
