--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,7 @@
 <h4>Login</h4>
-<form>
-    <input type="text" name="name" placeholder="username" ng-model="user">
-    <button ng-click="logToChat()">Login</button><br>
+<form class=form-inline>
+    <input type="text" name="name" placeholder="username" class="form-control" ng-model="user">
+    <button class="btn btn-default" ng-click="logToChat()">Login</button><br>
     <br>
     <sign-up></sign-up>
 </form>
