--- a/app/views/modifyMessage.html
+++ b/app/views/modifyMessage.html
@@ -1,5 +1,5 @@
-<h4>modify Message</h4>
 <form>
-    <textarea name="modify-message"  ng-model="message"></textarea>
-    <button ng-click="modifyMessage()">Modify</button>
+    <textarea class="form-control" name="modify-message" ng-model="message">{{message}}</textarea>
+    <button class="btn btn-primary" ng-click="modifyMessage()">Edit</button>
 </form>
+
