--- a/app/views/reply.html
+++ b/app/views/reply.html
@@ -1,5 +1,4 @@
-<h4>Reply to Message</h4>
 <form>
-    <textarea name="message"  ng-model="reply"></textarea>
-    <button ng-click="replyMessage()">Reply</button>
+    <textarea class="form-control" name="message"  ng-model="reply"></textarea>
+    <button class="btn btn-default" ng-click="replyMessage()">Reply</button>
 </form>
