--- a/app/views/sendMessage.html
+++ b/app/views/sendMessage.html
@@ -1,5 +1,5 @@
-<h4>Send Message</h4>
 <form>
-    <textarea name="message"  ng-model="message"></textarea>
-    <button ng-click="sendMessage()">Send</button>
+    <textarea class="form-control" name="message"  ng-model="message" rows="3" cols="20" placeholder="Send Message"></textarea>
+    <br>
+    <button class="btn btn-primary" ng-click="sendMessage()">Send</button>
 </form>
