--- a/app/views/signUp.html
+++ b/app/views/signUp.html
@@ -1,5 +1,5 @@
 <h4>Sign up</h4>
-<form>
-    <input type="text" name="name" placeholder="username" ng-model="username">
-    <button ng-click="signUpToChat()">Sign Up</button>
+<form class="form-inline">
+    <input type="text" class="form-control" name="name" placeholder="username" ng-model="username">
+    <button class="btn btn-primary" ng-click="signUpToChat()">Sign Up</button>
 </form>
