--- a/app/views/threads.html
+++ b/app/views/threads.html
@@ -1,9 +1,1 @@
-<h4>Get All Threads</h4>
-<button ng-click="getThreads()">Get Threads</button>
-<ul>
-    <li ng-repeat="thread in threads">
-        <h4>{{thread.name}}</h4>
-        <p>{{thread.message}}</p>
-        
-    </li>
-</ul>
+<thread ng-repeat="thread in collection | orderBy:'-'" thread="thread"></thread>
